--- a/product/product.css
+++ b/product/product.css
@@ -1,301 +1,480 @@
-@import url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
-@import url('https://fonts.google.com/specimen/Poppins?preview.text_type=custom%27');
-@import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bad+Script&display=swap");
+@import url("https://fonts.google.com/specimen/Poppins?preview.text_type=custom%27");
+@import url("https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-body{
-    font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
 .sticky {
-    width: 100%;
+  width: 100%;
 }
 
 .info-scrolling {
-    position: fixed;
-    font-size: 15px;
-    background-color: rgb(246, 246, 246);
-    width: 100%;
-    height: 27px;
-    overflow: hidden;
-    padding: 5px;
-    z-index: 1000;
+  position: fixed;
+  font-size: 15px;
+  background-color: rgb(246, 246, 246);
+  width: 100%;
+  height: 27px;
+  overflow: hidden;
+  padding: 5px;
+  z-index: 1000;
 }
 
 .info-scrolling > :first-child {
-    display: inline-block;
-    padding-right: 2em;
-    padding-left: 100%;
-    white-space: nowrap;
-    animation: defilement 10s infinite linear;
-    will-change: transform;
-    cursor: pointer;
+  display: inline-block;
+  padding-right: 2em;
+  padding-left: 100%;
+  white-space: nowrap;
+  animation: defilement 10s infinite linear;
+  will-change: transform;
+  cursor: pointer;
 }
 
 .info-scrolling:hover :first-child {
-    animation-play-state: paused;
+  animation-play-state: paused;
 }
 
 @keyframes defilement {
-    0% {
-        transform: translate3d(0,0,0);
-    }
-    
-    100% {
-        transform: translate3d(-100%,0,0);
-    }
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  100% {
+    transform: translate3d(-100%, 0, 0);
+  }
 }
 
 a.commandez {
-    position: absolute;
-    top: 160px;
-    right: 140px;
-    text-decoration: none;
-    font-family: 'Poppins', sans-serif;
-    padding: 15px 20px;
-    border: 3px solid #003249;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    transition: 0.3s;
-    font-weight: bold;
-    cursor: pointer;
-    color: #003249;
-  }
-  a.commandez:hover{
-    transform: scale(1.1);
-  }
+  position: absolute;
+  top: 160px;
+  right: 140px;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  padding: 15px 20px;
+  border: 3px solid #003249;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  transition: 0.3s;
+  font-weight: bold;
+  cursor: pointer;
+  color: #003249;
+}
+a.commandez:hover {
+  transform: scale(1.1);
+}
 
 .background-skewed {
-    position: relative;
-    width: 100%;
-    height: 920px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+  position: relative;
+  width: 100%;
+  height: 920px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .background-skewed::before {
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #E1D3BF;
-    clip-path: polygon(0% 100%, 100% 100%, 100% 14%);
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #e1d3bf;
+  clip-path: polygon(0% 100%, 100% 100%, 100% 14%);
 }
 
 .title-product {
-    color: black;
-    font-size: 4em;
-    margin-right: 650px;
-    padding-top: 100px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 100;
+  color: black;
+  font-size: 4em;
+  margin-right: 650px;
+  padding-top: 100px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
 }
 
 #slider1 {
-    position: relative;
-    margin: 60px;
-    display: flex;
-    align-items: center;
+  position: relative;
+  margin: 60px;
+  display: flex;
+  align-items: center;
 }
 
 #slider1 {
-    border-radius: 49px;
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
+  border-radius: 49px;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
 }
 
-#precedent1, #suivant1 {
-    cursor: pointer;
-    transition: opacity 0.3s ease;
-    opacity: 0;
-    position: absolute;
-    font-size: 50px;
-    color: black;
-    font-family: sans-serif;
+#precedent1,
+#suivant1 {
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+  opacity: 0;
+  position: absolute;
+  font-size: 50px;
+  color: black;
+  font-family: sans-serif;
 }
 
 #precedent1 {
-    left: 0;
+  left: 0;
 }
 
 #suivant1 {
-    right: 0;
+  right: 0;
 }
 
-#slider1:hover #precedent1, #slider1:hover #suivant1 {
-    opacity: 1;
-}
-
-#slider2 {
-    position: relative;
-    margin: 60px;
-    display: flex;
-    align-items: center;
+#slider1:hover #precedent1,
+#slider1:hover #suivant1 {
+  opacity: 1;
 }
 
 #slider2 {
-    border-radius: 49px;
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
+  position: relative;
+  margin: 60px;
+  display: flex;
+  align-items: center;
 }
 
-#precedent2, #suivant2 {
-    cursor: pointer;
-    transition: opacity 0.3s ease;
-    opacity: 0;
-    position: absolute;
-    font-size: 50px;
-    color: black;
-    font-family: sans-serif;
+#slider2 {
+  border-radius: 49px;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
+}
+
+#precedent2,
+#suivant2 {
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+  opacity: 0;
+  position: absolute;
+  font-size: 50px;
+  color: black;
+  font-family: sans-serif;
 }
 
 #precedent2 {
-    left: 0;
+  left: 0;
 }
 
 #suivant2 {
-    right: 0;
+  right: 0;
 }
 
-#slider2:hover #precedent2, #slider2:hover #suivant2 {
-    opacity: 1;
-}
-
-#slider3 {
-    position: relative;
-    margin: 60px;
-    display: flex;
-    align-items: center;
+#slider2:hover #precedent2,
+#slider2:hover #suivant2 {
+  opacity: 1;
 }
 
 #slider3 {
-    border-radius: 49px;
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
+  position: relative;
+  margin: 60px;
+  display: flex;
+  align-items: center;
 }
 
-#precedent3, #suivant3 {
-    cursor: pointer;
-    transition: opacity 0.3s ease;
-    opacity: 0;
-    position: absolute;
-    font-size: 50px;
-    color: black;
-    font-family: sans-serif;
+#slider3 {
+  border-radius: 49px;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
+}
+
+#precedent3,
+#suivant3 {
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+  opacity: 0;
+  position: absolute;
+  font-size: 50px;
+  color: black;
+  font-family: sans-serif;
 }
 
 #precedent3 {
-    left: 0;
+  left: 0;
 }
 
 #suivant3 {
-    right: 0;
+  right: 0;
 }
 
-#slider3:hover #precedent3, #slider3:hover #suivant3 {
-    opacity: 1;
+#slider3:hover #precedent3,
+#slider3:hover #suivant3 {
+  opacity: 1;
 }
 
 .border-radius {
-    border-radius: 49px;
+  border-radius: 49px;
 }
 
 .title-img {
-    text-align: center;
-    font-size: 30px;
-    margin-top: -55px;
-    position: relative;
-    margin-bottom: -60px;
-    font-family: 'Bad Script';
+  text-align: center;
+  font-size: 30px;
+  margin-top: -55px;
+  position: relative;
+  margin-bottom: -60px;
+  font-family: "Bad Script";
 }
 
 .container-img {
-    display: flex;
-    justify-content: space-between;
-    height: 535px;
+  display: flex;
+  justify-content: space-between;
+  height: 535px;
 }
 
 .element {
-    flex-basis: 30%;
-    display: flex;
-    
+  flex-basis: 30%;
+  display: flex;
 }
 
 .patisserie {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer-wrapper {
-    width: 100%;
-    background-color: #E1D3BF;
-    position: relative;
-    z-index: 0;
-    padding: 4.64rem 0;
+  width: 100%;
+  background-color: #e1d3bf;
+  position: relative;
+  z-index: 0;
+  padding: 4.64rem 0;
 }
 
 .container {
-    width: 95%;
-    max-width: 1114px;
-    height: 100%;
-    margin: 0 auto;
+  width: 95%;
+  max-width: 1114px;
+  height: 100%;
+  margin: 0 auto;
 }
 
 .btnfooter {
-    text-decoration: none;
-    font-family: 'Poppins', sans-serif;
-    padding: 15px 20px;
-    border: 3px solid #003249;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    transition: 0.3s;
-    font-weight: bold;
-    cursor: pointer;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  padding: 15px 20px;
+  border: 3px solid #003249;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  transition: 0.3s;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .fab {
-    margin: 15px;
-    transition: 0.6s;
+  margin: 15px;
+  transition: 0.6s;
 }
 .fab:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
-.fab.fa-facebook {  
-    color: #3b5998;
+.fab.fa-facebook {
+  color: #3b5998;
 }
 .fab.fa-linkedin-in {
-    color: #00A0DC;
+  color: #00a0dc;
 }
-.fab.fa-instagram-square{
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-    -webkit-background-clip: text;        
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+.fab.fa-instagram-square {
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .footer {
-    height: 160px;
-    width: 100%;
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-    padding: 5px;
-    background-color: #E1D3BF;
+  height: 160px;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 5px;
+  background-color: #e1d3bf;
 }
-  
+
 .footer img {
-    width: 160px;
-    height: auto;
+  width: 160px;
+  height: auto;
 }
 .btnfooter {
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  padding: 15px 20px;
+  border: 3px solid #003249;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  transition: 0.3s;
+  font-weight: bold;
+  cursor: pointer;
+}
+.btnfooter:hover {
+  transform: scale(1.1);
+}
+
+@media screen and (max-width: 640px) {
+  header {
+    padding: 0px;
+    z-index: 1000;
+  }
+
+  header.sticky {
+    padding: 0px;
+    z-index: 1000;
+  }
+
+  header .logo {
+    position: relative;
+    width: 40px;
+    height: 40px;
+  }
+
+  .menu {
+    position: absolute;
+    top: 40px;
+    left: -100%;
+    display: block;
+    padding: 100px 50px;
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    background: #fff;
+    transition: 0.5s;
+    z-index: 0;
+  }
+
+  .menu.active {
+    left: 0;
+  }
+
+  header ul li a {
+    color: #111;
+    font-size: 25px;
+    margin: 20px;
+  }
+  .toggle {
+    width: 40px;
+    height: 40px;
+    background: url(./images/icon/menu.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 30px;
+    cursor: pointer;
+    filter: invert(1);
+    transition: 0.2s;
+  }
+  .toggle.active {
+    background: url(./images/icon/close.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 25px;
+    cursor: pointer;
+    filter: invert(1);
+    transition: 0.2s;
+  }
+
+  header.sticky .toggle {
+    filter: invert(1);
+  }
+
+  .container-img {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .background-skewed::before {
+    display: none;
+  }
+
+  #slider img {
+    width: 200px;
+  }
+
+  .title-img {
+    font-size: 20px;
+    margin-top: auto;
+  }
+
+  .container-img {
+    padding: 0px;
+    z-index: 1000;
+  }
+
+  .container-img.sticky {
+    padding: 0px;
+    z-index: 1000;
+  }
+
+  .container-img .logo {
+    position: relative;
+    width: 40px;
+    height: 40px;
+  }
+
+  .menu {
+    position: absolute;
+    top: 40px;
+    left: -100%;
+    display: block;
+    padding: 100px 50px;
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    background: #fff;
+    transition: 0.5s;
+    z-index: 0;
+  }
+
+  .menu.active {
+    left: 0;
+  }
+
+  .container-img ul li a {
+    color: #111;
+    font-size: 25px;
+    margin: 20px;
+  }
+
+  .background-skewed {
+    height: 240vh;
+    width: 140%;
+  }
+
+  .footer {
+    background-color: white;
+    flex-direction: column;
+    margin-top: 600px;
+    margin-left: 65px;
+  }
+  .footer img {
+    display: none;
+  }
+
+  .btnfooter {
+    font-size: 10px;
+    padding: 10px 15px;
+    transition: 0.3s;
+    margin-bottom: 5px;
+  }
+  .title-product {
+    font-size: 3em;
+    margin-right: 0;
+    margin-bottom: 735px;
+  }
+  a.commandez {
+    position: absolute;
+    top: 200px;
+    right: 150px;
     text-decoration: none;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     padding: 15px 20px;
     border: 3px solid #003249;
     text-transform: uppercase;
@@ -303,226 +482,57 @@ a.commandez {
     transition: 0.3s;
     font-weight: bold;
     cursor: pointer;
-}
-.btnfooter:hover{
-    transform: scale(1.1);
-}
-
-@media screen and (max-width: 640px) {
-
-
-    header {
-        padding: 0px;
-        z-index: 1000;
-    }
-      
-    header.sticky {
-        padding: 0px;
-        z-index: 1000;
-    }
-  
-    header .logo {
-        position: relative;
-        width: 40px;
-        height: 40px;
-    }
-  
-    .menu {
-        position: absolute;
-        top: 40px;
-        left: -100%;
-        display: block;
-        padding: 100px 50px;
-        text-align: center;
-        width: 100%;
-        height: 100vh;
-        background: #fff;
-        transition: 0.5s;
-        z-index:0;
-    }
-
-    .menu.active {
-        left: 0;
-    }
-
-    header ul li a {
-        color: #111;
-        font-size: 25px;
-        margin: 20px;
-    }
-    .toggle {
-        width: 40px;
-        height: 40px;
-        background: url(./images/icon/menu.png);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 30px;
-        cursor: pointer;
-        filter: invert(1);
-        transition: 0.2s;
-    }
-    .toggle.active {
-        background: url(./images/icon/close.png);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 25px;
-        cursor: pointer;
-        filter: invert(1);
-        transition: 0.2s;
-    }
-    
-    header.sticky .toggle{
-        filter: invert(1);
-    }
-
-    .container-img {
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .background-skewed::before {
-        display: none;
-    }
-
-    #slider img {
-        width: 200px;
-    }
-
-    .title-img {
-        font-size: 20px;
-        margin-top: auto;
-    }
-
-    .container-img {
-        padding: 0px;
-        z-index: 1000;
-    }
-      
-    .container-img.sticky {
-        padding: 0px;
-        z-index: 1000;
-    }
-  
-    .container-img .logo {
-        position: relative;
-        width: 40px;
-        height: 40px;
-    }
-  
-    .menu{
-        position: absolute;
-        top: 40px;
-        left: -100%;
-        display: block;
-        padding: 100px 50px;
-        text-align: center;
-        width: 100%;
-        height: 100vh;
-        background: #fff;
-        transition: 0.5s;
-        z-index:0;
-    }
-
-    .menu.active {
-        left: 0;
-    }
-
-    .container-img ul li a {
-        color: #111;
-        font-size: 25px;
-        margin: 20px;
-    }
-
-      
-    .background-skewed {
-        height: 240vh;
-        width: 140%;
-    }
-
-    .footer {
-        background-color: white;
-        flex-direction: column;
-        margin-top: 600px;
-        margin-left: 65px;
-    }
-    .footer img {
-        display: none;
-    }
-
-    .btnfooter {
-        font-size: 10px;
-        padding: 10px 15px;
-        transition: 0.3s;
-        margin-bottom: 5px;
-    }
-    .title-product {
-        font-size: 3em;
-        margin-right: 0;
-        margin-bottom: 735px;
-    }
-    a.commandez {
-        position: absolute;
-        top: 200px;
-        right: 150px;
-        text-decoration: none;
-        font-family: 'Poppins', sans-serif;
-        padding: 15px 20px;
-        border: 3px solid #003249;
-        text-transform: uppercase;
-        letter-spacing: 3px;
-        transition: 0.3s;
-        font-weight: bold;
-        cursor: pointer;
-      }
+  }
 }
 
 header {
-    position: fixed;
-    width: 100%;
-    padding:20px;
-    top: 27px;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    transition: 0.6s;
-    z-index: 1000;
+  position: fixed;
+  width: 100%;
+  padding: 20px;
+  top: 27px;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.6s;
+  z-index: 1000;
 }
 
 header.sticky {
-    padding: 0px;
-	background: #fff;
-    filter: invert(1);
+  padding: 0px;
+  background: #fff;
+  filter: invert(1);
 }
 
-header .logo { 
-    width: 60px;
-    height: 60px;
+header .logo {
+  width: 60px;
+  height: 60px;
 }
 
 header ul {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
- 
+
 header ul li {
-    position: relative;
-    list-style: none;
+  position: relative;
+  list-style: none;
 }
- header ul li a {
-    position: relative;
-    display: inline-block;
-    margin: 0 15px;
-    padding: 5px 10px;
-    letter-spacing: 2px;
-    font-size: 20px;
-    font-weight: 500;
-    color: #111;
-    text-decoration: none;
-    transition: 0.6s;
+header ul li a {
+  position: relative;
+  display: inline-block;
+  margin: 0 15px;
+  padding: 5px 10px;
+  letter-spacing: 2px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #111;
+  text-decoration: none;
+  transition: 0.6s;
 }
-header ul li a.active, header ul li a:hover {
-    background: #E1D3BF;
+header ul li a.active,
+header ul li a:hover {
+  background: #e1d3bf;
 }
